--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <div class="user">
                                 <h2 class="info__title info__name">Обуховська Вікторія </h2>
                                 <div class="user__wrapper">
-                                    <img class="user__img" src="asset/img/user/ivan.png" alt="">
+                                    <img class="info__img" src="asset/img/user/ivan.png" alt="">
                                 </div>
                                 <ul class="info__list">
                                     <li class="info__item">v.obuhovska@gmail.com</li>
