--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
 
     <meta http-equiv="Expires" content="0">
     <title>Вікуля Заюля</title>
@@ -117,7 +118,7 @@
                             <div class="user">
                                 <h2 class="info__title info__name">Обуховська Вікторія </h2>
                                 <div class="user__wrapper">
-                                    <img class="info__img" src="asset/img/user/vika.png" alt="">
+                                    <img class="user__img" src="asset/img/user/vika.png" alt="">
                                 </div>
                                 <ul class="info__list">
                                     <li class="info__item">v.obuhovska@gmail.com</li>
