--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                             <button class="panel__button swiper__button">Вивчати</button>
                                         </div>
                                         <div class="progress-bar">
-                                            <div class="progress-index">50%</div>
+                                            <div class="progress-index">50 балів</div>
                                             <div class="progress-fill"style=" width: 50%;"></div>
                                         </div>
                                     
@@ -87,8 +87,8 @@
                                                <button class="panel__button swiper__button">Вивчати</button>
                                            </div>
                                            <div class="progress-bar">
-                                               <div class="progress-index">50%</div>
-                                               <div class="progress-fill" style=" width: 50%;"></div>
+                                               <div class="progress-index">20 балів</div>
+                                               <div class="progress-fill" style=" width: 20%;"></div>
                                            </div>
                                        
                                         </div>
